--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Veronica Eulenberg <veronica.eulenberg@gmail.com>",
   "private": true,
   "scripts": {
+    "build": "quasar build",
+    "start": "node server.js",
+    "heroku-postbuild": "yarn && yarn build",
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
@@ -13,10 +16,12 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
