--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "quasar build",
     "start": "node server.js",
     "heroku-postbuild": "yarn && yarn build",
+    "deploy": "git push heroku master",
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
