--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "Veronica Eulenberg <veronica.eulenberg@gmail.com>",
   "private": true,
   "scripts": {
+    "build": "quasar build",
     "start": "node server.js",
+    "heroku-postbuild": "yarn && yarn build",
+    "deploy": "git push heroku master",
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
