--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "quasar": "^1.0.0",
+    "quasar": "^2.1.x",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
