--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@quasar/cli": "^1.1.2",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
@@ -21,7 +22,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "quasar": "^2.1.6",
+    "quasar": "^1.0.0",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
