--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   "scripts": {
     "build": "quasar build",
     "start": "node server.js",
-    "heroku-postbuild": "npm install && node node_modules/@quasar/app/bin/quasar-build",
+    "heroku-postbuild": "npm i -g @quasar/cli && npm install && quasar build",
     "deploy": "git push heroku master",
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/cli": "^1.1.2",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
