--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
   "scripts": {
     "build": "quasar build",
     "start": "node server.js",
-    "heroku-prebuild": "npm install -g @quasar/cli",
-    "heroku-postbuild": "npm install && quasar build",
+    "heroku-postbuild": "npm ci && quasar build",
     "deploy": "git push heroku master",
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/cli": "^1.1.2",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
@@ -27,6 +25,7 @@
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
+    "@quasar/cli": "^1.1.2",
     "@quasar/app": "^2.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.8.0",
